--- a/vignettes/Intro_to_D3mirt.Rmd
+++ b/vignettes/Intro_to_D3mirt.Rmd
@@ -285,8 +285,9 @@ But it does suggest that the methodology *can* be used and the results will be p
 
 The `D3mirt()` function takes in a data frame with model parameters from a three-dimensional compensatory model and returns an $S3$ object of class `D3mirt` with lists of $a$ and $d$, $MDISC$, and $MDIFF$ parameters, and direction cosines..
 The direction cosines are also reported in spherical coordinates $\theta$ and $\phi$ ($\rho = 1$).
-The $\theta$ coordinate is the positive angle in degrees, starting from the $x$-axis, of the vector projections from the vector arrows in the $xz$-plane.
-Note, the $\theta$ angle is oriented following the positive pole of the $x$ and $z$ axis so that the angle increases clockwise in the graphical output.
+The $\theta$ coordinate is the positive or negative angle in degrees, starting from the $x$-axis, of the vector projections from the vector arrows in the $xz$-plane up to $\pm 180°$.
+Note, the positive $\theta$ angle is oriented following the positive poles of the $x$ and $z$ axis so that the angle increases clockwise in the graphical output.
+In opposite direction, the negative $\theta$ angle is oriented following the negative poles of the $x$ and $z$ axis so that the angle increases counterclockwise in the graphical output.
 The $\phi$ coordinate is the positive angle in degrees from the $y$-axis and the vectors.
 If constructs are used, the function also returns construct direction cosines, spherical coordinates for the construct vector arrows, and $DDISC$ parameters (one index per construct).
 
