--- a/README.Rmd
+++ b/README.Rmd
@@ -52,6 +52,9 @@ You can install the development version of D3mirt from [GitHub](https://github.c
 ``` r
 # install.packages("devtools")
 devtools::install_github("ForsbergPyschometrics/D3mirt")
+
+# install.packages("devtools") with package vignette included (takes longer time to install)
+devtools::install_github("ForsbergPyschometrics/D3mirt", build_vignettes = TRUE)
 ```
 
 In what follows, the `D3mirt` procedure will be described very briefly using the built-in data set "anes08_09offwaves". The data set ($N = 1046, M_{age} = 51.33, SD = 14.56, 57\%$ Female) is a subset from the American National Election Survey (ANES) from the 2008-2009 Panel Study Off Wave Questionnaires, December 2009 (DeBell, et al, 2010; <https://electionstudies.org/data-center/2008-2009-panel-study/>). All items measure moral preferences and are positively scored of Likert type, ranging from 1 = *Strongly Disagree* to 6 = *Strongly Agree*. Demographic variables include age and gender (male/female).
@@ -256,7 +259,7 @@ rgl::rglwidget(s,
 # Export a snap shoot of an open RGL device directly to file
 plotD3mirt(g, 
            constructs = TRUE)
-rgl::snapshot3d('RGLdevice.png', 
+rgl::rgl.snapshot('RGLdevice.png', 
                     fmt = 'png')
 ```
 
