--- a/README.Rmd
+++ b/README.Rmd
@@ -150,7 +150,7 @@ d <- data.frame(mirt::coef(mod1,
 ```
 ```{r}
 # Alternatively, load data frame d for this example directly from package file
-load("vignettes/d.Rdata")
+load("vignettes/d.rdata")
 ```
 
 Constructs can be included in the analysis by creating one or more nested lists that indicate what items belong to what construct. From this, the `D3mirt()` function finds the average direction of the subset of items contained in each construct list by normalizing the direction cosines for the items. Note, the length of the vector arrows is arbitrary and can be user adjusted.
